# vaakya

./: .gitignore  LICENSE  README.md  apps_cache.json  check_quality.sh  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run_server.sh  start.sh  stop.sh  test_agent.py  test_dynamic_agent.py  test_edge_cases.py  test_generic_apps.py  test_interactive.py  test_modular_agent.py
src/: main.py  vaakya_assistant.py
src/app/agent/: model_utils.py  planner.py  qwen_parser.py  smart_agent.py  working_agent.py
src/app/agent/operations/: __init__.py  app_operations.py  file_operations.py  system_operations.py  utilities.py  utils.py  web_operations.py
src/app/api/: server.py
src/app/app_launcher/: launcher.py  models.py
src/app/app_launcher/scanner/: apps.py  folders.py
src/app/config/: settings.py
src/app/models/: wyoming_events.py
src/app/services/: audio_processor.py  transcription_service.py  wakeword_listener.py  wyoming_client.py
src/tests/: test_agent.py  test_modular_agent.py  test_planner.py  test_shell_commands.py
